fixtures/invalid/python-private-import/src/producer/public.py
__all__ = ["exposed"]

from .internal import exposed
